--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,21 @@
+html {
+  height: 100%;
+}
+
 body {
-  padding-top: 40px;
   font-family: 'Courier New', monospace;
   text-align: center;
+  height: 100%;
   cursor: pointer;
+  position: relative;
+}
+
+.container {
+  width: 100%;
+  height: 300px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 
